# middoe

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python_publish.yml  qodana_code_quality.yml  release.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
middoe/: des_md.py  des_md.pyi  des_pp.py  des_pp.pyi  des_utils.py  des_utils.pyi  iden_parmest.py  iden_parmest.pyi  iden_uncert.py  iden_uncert.pyi  iden_utils.py  iden_utils.pyi  iden_valida.py  iden_valida.pyi  krnl_expera.py  krnl_expera.pyi  krnl_models.py  krnl_models.pyi  krnl_simula.py  krnl_simula.pyi  log_utils.py  log_utils.pyi  sc_estima.py  sc_estima.pyi  sc_sensa.py  sc_sensa.pyi
tests/: gpastester.py  insilico_scm_runner.py  intp.py  log_insilico.py  model.py  realo_scm_runner.py  runner for gPROMS.py  runner gproms 2.py  runner new.py  sensa_results.jac  ui_insilico_scm_normal.py
tests/case study 1/: monod.py
tests/case study 2/: model.py  runner.py
tests/case study 2 poster/: indata.xlsx  runner.ipynb  runner.py
tests/case study 2 poster/design/: 1 (round) by 0 core.xlsx  1 (round) by 1 core.xlsx  1 (round) by 10 core.xlsx  1 (round) by 11 core.xlsx  1 (round) by 12 core.xlsx  1 (round) by 13 core.xlsx  1 (round) by 14 core.xlsx  1 (round) by 15 core.xlsx  1 (round) by 2 core.xlsx  1 (round) by 3 core.xlsx  1 (round) by 4 core.xlsx  1 (round) by 5 core.xlsx  1 (round) by 6 core.xlsx  1 (round) by 7 core.xlsx  1 (round) by 8 core.xlsx  1 (round) by 9 core.xlsx  2 (round) by 0 core.xlsx  2 (round) by 1 core.xlsx  2 (round) by 10 core.xlsx  2 (round) by 11 core.xlsx  2 (round) by 12 core.xlsx  2 (round) by 13 core.xlsx  2 (round) by 14 core.xlsx  2 (round) by 15 core.xlsx  2 (round) by 2 core.xlsx  2 (round) by 3 core.xlsx  2 (round) by 4 core.xlsx  2 (round) by 5 core.xlsx  2 (round) by 6 core.xlsx  2 (round) by 7 core.xlsx  2 (round) by 8 core.xlsx  2 (round) by 9 core.xlsx
tests/case study poster/: iden_results.jac  indata.xlsx  model.py  model2.py  runner.ipynb  runner.py
tests/case study poster/post_processing/: M_report_2.xlsx  M_report_summary.txt
tests/escapeposter/case 1/: model.py  runner.ipynb
tests/escapeposter/case 2/: plot.py  runner.ipynb
tests/ionics/: cop.py  data.py  modelTL3.py  modelsim.py  modelsim2.py  modelsim2csh.py  modeltl2.py  modeltlpde.py  modelwithTl.py  modelwithparmest.py  modewithT.py  paper fig6.py  parmest.py  parmest2.py  parmestpde.py  plot6a.py  plot9.py  table.py
tests/mineralisationkin/: training.ipynb
tests/monod example/: monod 4 models.ipynb
tests/monod example 2/: runner.py
tests/paper/: monod.py
tests/paper/CS1/: MI.py  MII.py  MIII.py  MIV.py  indata.xlsx  runner.ipynb
tests/paper/CS1 - SC2/: iden_results.jac  indata.xlsx
tests/paper/CS1 - SC2/design/: 2 (round) by 0 core.xlsx  2 (round) by 1 core.xlsx  2 (round) by 10 core.xlsx  2 (round) by 11 core.xlsx  2 (round) by 12 core.xlsx  2 (round) by 13 core.xlsx  2 (round) by 14 core.xlsx  2 (round) by 15 core.xlsx  2 (round) by 2 core.xlsx  2 (round) by 3 core.xlsx  2 (round) by 4 core.xlsx  2 (round) by 5 core.xlsx  2 (round) by 6 core.xlsx  2 (round) by 7 core.xlsx  2 (round) by 8 core.xlsx  2 (round) by 9 core.xlsx
tests/paper/CS1 - SC2/post_processing/: MII_report_1.xlsx  (+4 more)
tests/paper/CS2 - SC1/: indata.xlsx  indata2.xlsx  indata3.xlsx  model.py  runner.ipynb  runner.py
tests/paper/case study 2 - scenario 1/: runner.ipynb
tests/paper/case study 2 - scenario 2/: runner.ipynb
tests/paper/tst5/: test.py  tst2.py
tests/poster/case 1/: iden_results.jac  indata.xlsx  runner.ipynb
tests/poster/case 2/: iden_results.jac  indata.xlsx  plot.py  runner.ipynb
tests/poster2/case 1/: iden_results.jac  indata.xlsx  runner.ipynb
tests/poster2/case 2/: iden_results.jac  indata.xlsx  runner.ipynb
tests/semiconwet/: model_semiconwet.py  training.ipynb
tests/semwet/: gg.py  simul-Tcon.py  simul-Teff.py
(+240 files in other folders)
