[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "middoe"

[project]
name = "middoe"
version = "0.0.1"
authors = [{name = "Zuhair Tabrizi", email="zuhairtabrizi@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "Model Identification, Discrimination, and Design of Experiments."

# https://pypi.org/classifiers/
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [

]

[project.optional-dependencies]
test = [

]

[project.urls]
Repository = "https://github.com/zuhairblr/middoe/"


# https://flit.pypa.io/en/latest/upload.html
# flit build
# flit publish --repository testpypi
# flit publish
