[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "middoe"

[project]
name = "middoe"
version = "0.0.1"
authors = [{name = "Zuhair Tabrizi", email="zuhairtabrizi@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "Model Identification, Discrimination, and Design of Experiments."



# Classifiers help PyPI users understand the package details
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

# Core dependencies (required for MIDDOE to function)
dependencies = [
    "numpy<=2.2.3",
    "scipy<=1.15.2",
    "matplotlib<=3.10.1",
    "pandas<=2.2.3"
]

[project.optional-dependencies]
test = [

]

[project.urls]
Repository = "https://github.com/zuhairblr/middoe/"


# https://flit.pypa.io/en/latest/upload.html
# flit build
# flit publish --repository testpypi
# flit publish