#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
#
#[tool.flit.module]
#name = "middoe"
#
#[project]
#name = "middoe"
#version = "0.0.1"
#authors = [{name = "Zuhair Tabrizi", email="zuhairtabrizi@gmail.com"}]
#readme = "README.md"
#license = {file = "LICENSE"}
#description = "Model Identification, Discrimination, and Design of Experiments."
#
#
#
## Classifiers help PyPI users understand the package details
#classifiers = [
#    "Development Status :: 3 - Alpha",
#    "Intended Audience :: Science/Research",
#    "Intended Audience :: Developers",
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.9",
#    "Programming Language :: Python :: 3.10",
#    "Programming Language :: Python :: 3.11",
#    "Topic :: Scientific/Engineering",
#]
#
## Core dependencies (required for MIDDOE to function)
#dependencies = [
#    "numpy<=2.2.3",
#    "scipy<=1.15.2",
#    "matplotlib<=3.10.1",
#    "pandas<=2.2.3"
#]
#
#[project.optional-dependencies]
#test = [
#
#]
#
#[project.urls]
#Repository = "https://github.com/zuhairblr/middoe/"
#
#
## https://flit.pypa.io/en/latest/upload.html
## flit build
## flit publish --repository testpypi
## flit publish

[tool.poetry]
name = "middoe"
version = "0.0.1"
description = "Model Identification, Discrimination, and Design of Experiments."
authors = ["Zuhair Tabrizi <zuhairtabrizi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = "<=2.2.3"
scipy = "<=1.15.2"
matplotlib = "<=3.10.1"
pandas = "<=2.2.3"
pendulum = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.urls]
"Repository" = "https://github.com/zuhairblr/middoe/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
